4.6.2
-----
1. When adding obtaining random album/release to queue ensure title is asked
   from LMS.
2. In MAI track view only show 'Band/orchestra' if different to 'Album
   artist', and only show 'Albuim artist' if different from track artist.
3. Add 'browseWork' to 'document.lmsMaterialSkin'

4.6.1
-----
 1. Update some translations.
 2. If LMS < 8.5.2 and using 'All' tracks library for 'Random Mix' then use '0'
    as library_id.
 3. Fix incorrect 'Works' header showing for 'Advanced search' results.
 4. Get genre list for 'Random Mix' from 'randomplaygenrelist' command.
 5. Use term 'Track' instead of 'Song'.
 6. Use correct icon for 'Releases' under 'Genres'.
 7. Show release total time in release style queue for releases with more than 1
    track.
 8. Don't '0' pad times.
 9. Pass default library id when removing albums/releases from queue.
10. Alter how toolbar background image is blurred.
11. Fix links from now-playing.
12. Don't use 'library_id' from SlimBrowse responses.

4.6.0
-----
 1. Add option to auto-switch to reduced now-playing view, to help with OLED
    screen burn-in.
 2. For LMS running on piCorePlayer add 'Configuration' item to top-right menu
    of 'Server settings'
 3. If width >= 1000px then allow image in now-playing landscape to take 60% of
    width.
 4. Always blur background of detailed sub-toolbar.
 5. Manually reduce size of Vuetify CSS file.
 6. Multi-cover display for works in subtoolbar.
 7. Move pin/un-pin queue button into its menu.
 8. Show queue button in desktop now-playing bar if 1 or more tracks in queue.
 9. Base max grid cover size on window width.
10. If an artist has multiple release types then show an 'All releases' action
    in '...' menu.
11. Add 'hover' to grid items.
12. Use '-1' as default library id.
13. Show skip-overlay upon 'mouseup' not 'click' event.
14. For consistency, only start volume change on swipe when landscape if
    started on cover image (as per portrait view).