@@ -24,6 +24,10 @@
     </select>
     [% END %]
 
+    [% WRAPPER setting title="PLUGIN_MATERIAL_COMBINE_APPS_AND_RADIO" desc="PLUGIN_MATERIAL_COMBINE_APPS_AND_RADIO_DEC" %]
+    <input type="checkbox" name="pref_combineAppsAndRadio" id="pref_combineAppsAndRadio" [% IF prefs.pref_combineAppsAndRadio %] checked [% END %] value="1"/>
+    [% END %]
+
     [% WRAPPER setting title="PLUGIN_MATERIAL_SKIN_RELEASE_TYPE_ORDER" desc="PLUGIN_MATERIAL_SKIN_RELEASE_TYPE_ORDER_DESC" %]
     <textarea class="stdedit" name="pref_releaseTypeOrder" id="releaseTypeOrder" cols="45" rows="5">[% prefs.releaseTypeOrder %]</textarea>
     [% END %]
