@@ -567,3 +567,9 @@ PLUGIN_MATERIAL_SKIN_LOAD_DEFAULT_GENRES
 	FR	Restaurer les genres par défaut
 	NL	Herstel standaard genres
 	ZH_CN	将流派设为默认值
+
+PLUGIN_MATERIAL_COMBINE_APPS_AND_RADIO
+	EN	Combine 'Apps' and 'Radio'
+
+PLUGIN_MATERIAL_COMBINE_APPS_AND_RADIO_DESC
+	EN	Combine the 'Apps' and 'Radio' menus into a single 'Apps' menu, with a 'TuneIn' app added for 'Radio' (if enabled).
