@@ -1,3 +1,7 @@
+x.x.x
+-----
+1. Add server-side option to combine 'Apps' and 'Radios' menus.
+
 4.6.2
 -----
 1. When adding obtaining random album/release to queue ensure title is asked
